--- a/MDK-ARM/TCS3200/TCS3200.build_log.htm
+++ b/MDK-ARM/TCS3200/TCS3200.build_log.htm
@@ -26,46 +26,99 @@ Project File Date:  01/19/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'TCS3200'
+Rebuild target 'TCS3200'
 assembling startup_stm32f407xx.s...
-compiling stm32f4xx_it.c...
-compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_flash_ex.c...
 compiling main.c...
 compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_it.c...
 compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_flash_ex.c...
 compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_rcc_ex.c...
 compiling tcs3200.c...
-..\..\Libraries\tcs3200.c(58): error:  #20: identifier "S2_GPIO_Port" is undefined
-  				HAL_GPIO_WritePin(S2_GPIO_Port, S2_Pin, GPIO_PIN_RESET);
-..\..\Libraries\tcs3200.c(58): error:  #20: identifier "S2_Pin" is undefined
-  				HAL_GPIO_WritePin(S2_GPIO_Port, S2_Pin, GPIO_PIN_RESET);
-..\..\Libraries\tcs3200.c(59): error:  #20: identifier "S3_GPIO_Port" is undefined
-  				HAL_GPIO_WritePin(S3_GPIO_Port, S3_Pin, GPIO_PIN_RESET);
-..\..\Libraries\tcs3200.c(59): error:  #20: identifier "S3_Pin" is undefined
-  				HAL_GPIO_WritePin(S3_GPIO_Port, S3_Pin, GPIO_PIN_RESET);
-..\..\Libraries\tcs3200.c(90): warning:  #223-D: function "HAL_UART_Transmit" declared implicitly
+..\..\Libraries\tcs3200.c(48): error:  #65: expected a ";"
+  {
+..\..\Libraries\tcs3200.c(69): warning:  #12-D: parsing restarts here after previous syntax error
+      		break;
+..\..\Libraries\tcs3200.c(71): error:  #122: a default label may only be used within a switch
+      	default:
+..\..\Libraries\tcs3200.c(72): error:  #116: a break statement may only be used within a loop or switch
+      		break;
+..\..\Libraries\tcs3200.c(75): error:  #169: expected a declaration
+  }
+..\..\Libraries\tcs3200.c(99): warning:  #12-D: parsing restarts here after previous syntax error
+  				HAL_Delay(TIME);
+..\..\Libraries\tcs3200.c(101): error:  #79: expected a type specifier
+  				RegisterColor(CLEAR);
+..\..\Libraries\tcs3200.c(101): error:  #260-D: explicit type is missing ("int" assumed)
+  				RegisterColor(CLEAR);
+..\..\Libraries\tcs3200.c(101): error:  #147: declaration is incompatible with "void RegisterColor(int)"  (declared at line 17 of "..\..\Libraries\tcs3200.h")
+  				RegisterColor(CLEAR);
+..\..\Libraries\tcs3200.c(102): error:  #40: expected an identifier
+  				sprintf(uartComAT, "Clear: %d  ", Difference);
+..\..\Libraries\tcs3200.c(102): error:  #260-D: explicit type is missing ("int" assumed)
+  				sprintf(uartComAT, "Clear: %d  ", Difference);
+..\..\Libraries\tcs3200.c(102): error:  #92: identifier-list parameters may only be used in a function definition
+  				sprintf(uartComAT, "Clear: %d  ", Difference);
+..\..\Libraries\tcs3200.c(102): error:  #147-D: declaration is incompatible with "int sprintf(char *restrict, const char *restrict, ...)"  (declared at line 417 of "C:\Keil_v5\ARM\ARMCC\Bin\..\include\stdio.h")
+  				sprintf(uartComAT, "Clear: %d  ", Difference);
+..\..\Libraries\tcs3200.c(103): error:  #77-D: this declaration has no storage class or type specifier
+  				clear = Difference;
+..\..\Libraries\tcs3200.c(103): error:  #147: declaration is incompatible with "uint8_t clear"  (declared at line 6)
+  				clear = Difference;
+..\..\Libraries\tcs3200.c(103): error:  #148: variable "clear"  has already been initialized
+  				clear = Difference;
+..\..\Libraries\tcs3200.c(103): error:  #28: expression must have a constant value
+  				clear = Difference;
+..\..\Libraries\tcs3200.c(104): error:  #79: expected a type specifier
   				HAL_UART_Transmit(&huart2, (uint8_t *)uartComAT, strlen(uartComAT), 100);
-..\..\Libraries\tcs3200.c(90): error:  #20: identifier "huart2" is undefined
+..\..\Libraries\tcs3200.c(104): error:  #79: expected a type specifier
   				HAL_UART_Transmit(&huart2, (uint8_t *)uartComAT, strlen(uartComAT), 100);
-..\..\Libraries\tcs3200.c: 1 warning, 5 errors
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_pwr_ex.c...
+..\..\Libraries\tcs3200.c(104): error:  #757: function "strlen"  is not a type name
+  				HAL_UART_Transmit(&huart2, (uint8_t *)uartComAT, strlen(uartComAT), 100);
+..\..\Libraries\tcs3200.c(104): error:  #79: expected a type specifier
+  				HAL_UART_Transmit(&huart2, (uint8_t *)uartComAT, strlen(uartComAT), 100);
+..\..\Libraries\tcs3200.c(104): error:  #260-D: explicit type is missing ("int" assumed)
+  				HAL_UART_Transmit(&huart2, (uint8_t *)uartComAT, strlen(uartComAT), 100);
+..\..\Libraries\tcs3200.c(104): error:  #147: declaration is incompatible with "HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *, uint8_t *, uint16_t, uint32_t)"  (declared at line 696 of "../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h")
+  				HAL_UART_Transmit(&huart2, (uint8_t *)uartComAT, strlen(uartComAT), 100);
+..\..\Libraries\tcs3200.c(105): error:  #79: expected a type specifier
+  				HAL_Delay(TIME);
+..\..\Libraries\tcs3200.c(105): error:  #260-D: explicit type is missing ("int" assumed)
+  				HAL_Delay(TIME);
+..\..\Libraries\tcs3200.c(105): error:  #147: declaration is incompatible with "void HAL_Delay(uint32_t)"  (declared at line 234 of "../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h")
+  				HAL_Delay(TIME);
+..\..\Libraries\tcs3200.c(107): error:  #77-D: this declaration has no storage class or type specifier
+  				color = red*65536 + green*256 + blue;
+..\..\Libraries\tcs3200.c(107): error:  #147: declaration is incompatible with "uint32_t color"  (declared at line 8)
+  				color = red*65536 + green*256 + blue;
+..\..\Libraries\tcs3200.c(107): error:  #148: variable "color"  has already been initialized
+  				color = red*65536 + green*256 + blue;
+..\..\Libraries\tcs3200.c(107): error:  #28: expression must have a constant value
+  				color = red*65536 + green*256 + blue;
+..\..\Libraries\tcs3200.c(107): error:  #28: expression must have a constant value
+  				color = red*65536 + green*256 + blue;
+..\..\Libraries\tcs3200.c(107): error:  #28: expression must have a constant value
+  				color = red*65536 + green*256 + blue;
+..\..\Libraries\tcs3200.c: 2 warnings, 30 errors
+compiling stm32f4xx_hal_tim.c...
 compiling servos_buttons.c...
 ..\..\Libraries\servos_buttons.c(76): warning:  #1-D: last line of file ends without a newline
   /*###############################################################################################*/
 ..\..\Libraries\servos_buttons.c: 1 warning, 0 errors
-compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_msp.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_pwr_ex.c...
 compiling stm32f4xx_hal.c...
-"TCS3200\TCS3200.axf" - 5 Error(s), 2 Warning(s).
+compiling stm32f4xx_hal_exti.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_uart.c...
+"TCS3200\TCS3200.axf" - 30 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -89,7 +142,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.2.0
 Target not created.
-Build Time Elapsed:  00:00:14
+Build Time Elapsed:  00:00:15
 </pre>
 </body>
 </html>
